fix:images and text aligned

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,16 +121,26 @@ body {
 .wrapper{
   display:flex;
   flex-direction:column;
-  align-items:center;
   justify-content:center;
+  align-items:center;
   max-width:100%;
   margin-left:3px;
   margin-right:3px;
   padding-bottom:3px;
 }
-.wrapper img{
-  max-width:100%; 
+
+
+img.keto-diet{
+  width:100%;
+  height:auto;
+  max-width: 50vw;
 }
+img.keto-macros{
+  width:100%;
+  height:auto;
+  max-width:50vw;
+  }
+
 .footer-wrapper{
   display:flex;
   flex-direction:row;
@@ -182,23 +192,39 @@ body {
     .wrapper{
       display:flex;
       flex-direction:row-reverse;
-      justify-content:space-evenly;
+      justify-content:center;
       align-items:center;
-      }
+      max-width:100%
+    }
     .wrapper div{
-      margin-top:5vh;
-        margin-left:2vw;
-        font-size:1rem;
-      }
+      font-size:1.2rem;
+      width:50vw;
+      height:auto;
+      color:#ffffff;
+      padding:4vw;
+      text-align:justify; /* aligns the text to justify */
+    }
+    img.keto-diet{
+      width:100%;
+      height:auto;
+      max-width: 50vw;
+    }
+    img.keto-macros{
+      width:100%;
+      height:auto;
+      max-width:50vw;
+    }
     }
 
   @media screen and (min-width:1700px){
     .wrapper div{ 
       font-size:1.8rem;
+      max-width:50vw;
+      height:auto;
       }   
-      img.keto-macros{
-        width:800px;
+      /*img.keto-macros{
+        width:100%;
         height:auto;
-      } 
+      } */
   }
     
